# yapzee-common

./: CLAUDE.md  README.md  package.json  pyproject.toml  tsconfig.json
docs/: 08-llm-integration.md  HOW-IT-WORKS.md
src/: auth.ts  config.ts  index.ts  internalAuth.ts  lessonParser.ts  llm.ts
test/: auth.test.ts  config.test.ts  internalAuth.test.ts  lessonParser.test.ts
tests/: test_auth.py  test_config.py  test_internal_auth.py  test_lesson_parser.py
yapzee_common/: __init__.py  auth.py  config.py  internal_auth.py  lesson_parser.py  llm.py
