[project]
name = "yapzee-common"
version = "0.2.0"
description = "Shared YapZee library: LLM provider routing, config, JWT helpers, lesson parsing"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.0",
    "openai>=1.50",
    "anthropic>=0.40",
    "google-genai>=0.3",
    "python-jose[cryptography]>=3.3",
    "fastapi>=0.135",
]

[dependency-groups]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yapzee_common"]
